--- a/WeiLaiWang/package.json
+++ b/WeiLaiWang/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "react": "^15.1.0",
     "react-native": "^0.27.2",
-    "react-native-storage": "^0.1.2"
+    "react-native-storage": "^0.1.2",
+    "react-native-viewpager": "^0.2.11"
   }
 }
