--- a/WeiLaiWang/package.json
+++ b/WeiLaiWang/package.json
@@ -1,14 +1,12 @@
 {
   "name": "WeiLaiWang",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start"
   },
   "dependencies": {
     "react": "^15.1.0",
-    "react-native": "^0.27.2",
-    "react-native-storage": "^0.1.2",
-    "react-native-viewpager": "^0.2.11"
+    "react-native": "^0.27.2"
   }
 }
